# setlog

./: README.md  pyproject.toml
.github/workflows/: setlog_code_quality.yml
apps/setlog/: .gitignore  CHANGES.md  main.py  mkdocs.yml  pyproject.toml
apps/setlog/.github/actions/setup/: action.yml
apps/setlog/.github/workflows/: code_quality.yml
apps/setlog/docs/: about.md  index.md  mkdocs.yml
apps/setlog/src/setlog/domain/entities/: __init__.py  act.py  album.py  extended_plays.py  genre.py  label.py  location.py  record.py  recording_act.py  single.py  solo_artist.py  track.py
apps/setlog/src/setlog/domain/value_objects/: __init__.py  common_types.py  record_types.py
apps/setlog/tests/entities/: test_act.py  test_label.py  test_location.py
apps/setlog/tests/setlog/unit_tests/test_entities/: test_act.py  test_album.py  test_extended_plays.py  test_genre.py  test_record.py  test_recording_act.py  test_single.py  test_solo_artist.py  test_track.py
apps/setlog/tests/test_entities/: test_act_entity.py  test_genre.py  test_location.py
apps/setlog/tests/test_setlog/test_entities/: test_act_entity.py  test_genre.py  test_label.py
